--- a/config.yaml
+++ b/config.yaml
@@ -1,9 +1,9 @@
 # jwt configuration
 jwt:
-    signing-key: qmPlus
+    signing-key: epsOwner
     expires-time: 7d
     buffer-time: 1d
-    issuer: qmPlus
+    issuer: epsOwner
 # zap logger configuration
 zap:
     level: info
@@ -35,7 +35,7 @@ email:
 # system configuration
 system:
     env: public # Change to "develop" to skip authentication for development mode
-    addr: 8888
+    port: 8888
     db-type: mysql
     oss-type: local # 控制oss选择走本地还是 七牛等其他仓 自行增加其他oss仓可以在 server/utils/upload/upload.go 中 NewOss函数配置
     use-redis: false # 使用redis
@@ -45,7 +45,7 @@ system:
     #  IP限制一个小时
     iplimit-time: 3600
     #  路由全局前缀
-    router-prefix: ""
+    router-prefix: "v1"
 
 # 跨域配置
 # 需要配合 server/initialize/router.go -> `Router.Use(middleware.CorsByRules())` 使用
