feat:修正登入可用email以及phone登入

--- a/config.yaml
+++ b/config.yaml
@@ -68,7 +68,7 @@ cors:
 mysql:
     path: ""
     port: "3306"
-    config: "parseTime=true"
+    config: "parseTime=true&loc=Local"
     db-name: "portfolio"
     username: "root"
     password: "root"
