feat:新增Mongodb相關與Individual個人資訊API

--- a/config.yaml
+++ b/config.yaml
@@ -76,3 +76,11 @@ mysql:
     max-open-conns: 100
     log-mode: ""
     log-zap: false
+
+# mongodb connect configuration
+mongo:
+    username: "admin"
+    password: "admin"
+    host: "127.0.0.1"
+    port: "27017"
+    db-name: "portfolio"
